fix lai layout bai 1

--- a/bai1-tao layout/index.html
+++ b/bai1-tao layout/index.html
@@ -11,28 +11,32 @@
 </head>
 
 <body>
-    <header>
-        <p>== HEADER ==</p>
-    </header>
-    <nav>
-        <p>== NAV ==</p>
-    </nav>
-    <div class="container">
-        <div class="container_1">
-            <section>
-                <p>== SECTION ==</p>
-            </section>
-            <article>
-                <p>== ARTICLE ==</p>
-            </article>
-        </div>
-        <aside>
-            <p>== ASIDE ==</p>
-        </aside>
+    <div class="wrapper">
+        <header>
+            == HEADER ==
+        </header>
+        <nav>
+            == NAV ==
+        </nav>
+        <main>
+            <div class="main-content">
+                <section>
+                    == SECTION ==
+                </section>
+                <article>
+                    == ARTICLE ==
+                </article>
+            </div>
+            <aside>
+                == ASIDE ==
+            </aside>
+
+        </main>
+        <footer>
+             == FOOTER ==
+        </footer>
     </div>
-    <footer>
-        <p> == FOOTER ==</p>
-    </footer>
+
 </body>
 
 </html>
