--- a/bai3-dung boostrap/index.html
+++ b/bai3-dung boostrap/index.html
@@ -21,7 +21,7 @@
     <div class="mb-3 row">
       <label for="inputUsername" class="col-sm-3 col-form-label">Username</label>
       <div class="col-sm-6">
-        <input type="password" placeholder="username" class="form-control" id="inputUsername">
+        <input type="text" placeholder="username" class="form-control" id="inputUsername">
       </div>
     </div>
     <div class="mb-3 row">
