--- a/bai2-tao layout/index.html
+++ b/bai2-tao layout/index.html
@@ -10,25 +10,31 @@
 </head>
 
 <body>
-    <header>
-        <h1>Cities</h1>
-    </header>
-    <section class="container">
-        <nav>
-            <ul>
-                <li><a href="">paris</a></li>
-                <li><a href="">london</a></li>
-                <li> <a href="">tokyo</a></li>
-            </ul>
-        </nav>
-        <article>
-            <h1>LONDON</h1>
-            <p>london is .....</p>
-        </article>
-    </section>
-    <footer>
-        <p>footer</p>
-    </footer>
+    <div class="web">
+        <header>
+            <h1>Cities</h1>
+        </header>
+        <section class="container">
+            <nav>
+                <ul>
+                    <li><a href="">paris</a></li>
+                    <li><a href="">london</a></li>
+                    <li> <a href="">tokyo</a></li>
+                </ul>
+            </nav>
+            <article>
+                <h1 style="font-size:35px;">LONDON</h1>
+                <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a
+                    metropolitan area of over 13 million inhabitants.</p>
+                <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going
+                    back to its founding by the Romans, who named it Londinium.</p>
+            </article>
+        </section>
+        <footer>
+            footer
+        </footer>
+    </div>
+
 </body>
 
 </html>
