--- a/bai4_tao_layout/index.html
+++ b/bai4_tao_layout/index.html
@@ -18,47 +18,47 @@
         <div class="content">
             <div class="content-left">
                 <div class="search">
-                    Search
+                    <div class="p">Search</div> 
                 </div>
                 <div class="social">
-                    Social Media
+                    <div class="p">Social Media</div> 
                 </div>
                 <div class="news">
-                    News Letter Sign Up
+                    <div class="p">News Letter Sign Up</div> 
                 </div>
             </div>
             <div class="content-center">
                 <div class="banner">
-                    Banner
+                    <div class="p">Banner</div> 
                 </div>
                 <div class="copy">
-                    Copy
+                    <div class="p">Copy</div> 
                 </div>
                 <div class="products">
-                    Products
+                    <div class="p">Products</div> 
                 </div>
                 <div class="copy">
-                    Copy
+                    <div class="p">Copy</div> 
                 </div>
                 <div class="blog">
-                    Blog
+                    <div class="p">Blog</div>
                 </div>  
             </div>
             <div class="content-right">
                 <div class="top">
                     <div class="categories">
-                        <div class="categories-item1">Categories</div>
+                        <div class="categories-item1"><div class="p">Categories</div> </div>
                         <div class="categories-item2"></div>
                         <div class="categories-item3"></div>
                         <div class="categories-item4"></div>
                         <div class="categories-item5"></div>
                     </div>
                     <div class="side-nav">
-                        Side Nav
+                        <div class="p">Side Nav</div>
                     </div>
                 </div>
                 <div class="other-offer">
-                    <span>Other Offers</span>
+                    <div class="p">Other Offers</div>
                 </div>
             </div>
         </div>
